# Chat-MVP-Gradio

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/scripts/: create_pr.sh
.github/workflows/: bump_version.yaml  codeql.yaml  generate-deploy-mkdocs-ghpages.yaml  links-fail-fast.yaml  pytest.yaml
assets/: baml_integration.md
assets/datasets/: chat_upload_sample.csv
assets/templates/: template.html.css  template.html.tpl
scripts/: deploy.ps1  startup.sh
src/: __init__.py  app.py  config.py
src/chat/: azure_client.py  azure_config.py  data_models.py
src/gui/: gui.css  gui.py
src/gui/gui_builder/: gui_actions.py  gui_bind_events.py  gui_create_controls.py  gui_file_utils.py  gui_handle_events.py
src/gui/i18n/: gui_text_en.py
tests/: test_azure_client.py  test_azure_config.py  test_generate_html_from_md.py
