[project]
name = "RB-MVP-Gradio"
version = "0.0.0"
license = "bsd-3-clause"
authors = [
    {name = "qte77", email = "qte@77.gh"}
]
readme = "README.md"
requires-python = "== 3.13.*"
dependencies = [
    "gradio >= 5.29.0",
    "loguru >= 0.7.3",
    "markdown >= 3.8",
    "openai >= 1.78.1",
    "pathvalidate >= 3.2.3",
    "pydantic >= 2.11.4",
    "pydantic_settings >= 2.9.1",
]
[dependency-groups]
dev  = [
    "bump-my-version >= 1.1.3",
    "mypy >= 1.15.0",
    "pytest >= 8.3.5",
    "ruff >= 0.11.9",
]
docs = [
    "griffe>=1.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-section-index>=0.3.8",
    "mkdocstrings[python]>=0.27.0",
]

[tool.uv]
# package = true
exclude-newer = "2025-05-19T00:00:00Z"

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
combine-as-imports = true
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.13"
# avoids clutter from untyped third-party libs
ignore_missing_imports = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[tool.bumpversion]
current_version = "0.0.0"
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-58f4c2.svg"
replace = "version-{new_version}-58f4c2.svg"

[[tool.bumpversion.files]]
filename = "src/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
